[package]
name = "cosmos-sdk-proto"
version = "0.3.0" # Also update html_root_url in lib.rs when bumping this
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/master/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "cosmos", "tendermint", "proto"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"]}
wasm-bindgen-futures = { version = "0.4.21"}
wasm-bindgen-test = "0.3.20"
prost = "0.7"
prost-types = "0.7"
serde = { version = "1.0", features = ["derive"] }

# Optional dependencies
tonic = { version = "0.4", optional = true }

[dependencies.tendermint-proto]
version = "0.18"

#[features]
# default = ["grpc"]
# grpc = ["tonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]